--- a/Savio/SaveCard/SASaveCardViewController.xib
+++ b/Savio/SaveCard/SASaveCardViewController.xib
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="ipad9_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -34,10 +37,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view hidden="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="G95-z0-8H3">
-                    <frame key="frameInset" width="600" height="40"/>
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="40"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CS7-AM-Dce">
-                            <frame key="frameInset" width="300" height="38"/>
+                            <rect key="frame" x="0.0" y="0.0" width="300" height="38"/>
                             <color key="backgroundColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="38" id="O9h-ue-lGn"/>
@@ -49,7 +52,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BQI-sX-OtU">
-                            <frame key="frameInset" minX="302" minY="2" width="300" height="38"/>
+                            <rect key="frame" x="302" y="2" width="300" height="38"/>
                             <color key="backgroundColor" red="0.94117647059999998" green="0.64313725489999995" blue="0.22352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="38" id="8e6-cE-pUD"/>
@@ -75,12 +78,13 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4Oh-hl-vSV">
-                    <frame key="frameInset" minX="55" minY="60" width="490" height="128"/>
+                    <rect key="frame" x="55" y="60" width="490" height="128"/>
                     <subviews>
                         <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wKN-LO-IPY">
-                            <frame key="frameInset" minX="2" minY="2" width="486" height="124"/>
+                            <rect key="frame" x="2" y="2" width="486" height="124"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IQI-by-fDv">
+                                    <rect key="frame" x="20" y="15" width="40" height="40"/>
                                     <color key="backgroundColor" red="0.95686274509803915" green="0.84313725490196079" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="40" id="EbG-wV-wJo"/>
@@ -93,7 +97,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <textField opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1234" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="97c-Ph-lCP">
-                                    <frame key="frameInset" minX="20" minY="69" width="110" height="30"/>
+                                    <rect key="frame" x="20" y="69" width="110" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="30" id="NE3-Rs-ZZh"/>
                                     </constraints>
@@ -101,7 +105,7 @@
                                     <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                 </textField>
                                 <textField opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1234" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wOO-y3-XKW">
-                                    <frame key="frameInset" minX="133" minY="69" width="110" height="30"/>
+                                    <rect key="frame" x="133" y="69" width="110" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="30" id="cR3-lK-Ej3"/>
                                     </constraints>
@@ -109,7 +113,7 @@
                                     <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                 </textField>
                                 <textField opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1234" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rTL-2e-Mca">
-                                    <frame key="frameInset" minX="246" minY="69" width="110" height="30"/>
+                                    <rect key="frame" x="246" y="69" width="110" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="30" id="Asw-2U-QtI"/>
                                     </constraints>
@@ -117,7 +121,7 @@
                                     <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                 </textField>
                                 <textField opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="7890" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hNQ-af-vTu">
-                                    <frame key="frameInset" minX="358" minY="69" width="110" height="30"/>
+                                    <rect key="frame" x="358" y="69" width="110" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="30" id="far-Os-CfY"/>
                                     </constraints>
@@ -168,13 +172,13 @@
                     </constraints>
                 </view>
                 <view hidden="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ojk-Yx-hW7">
-                    <frame key="frameInset" minY="560" width="600" height="40"/>
+                    <rect key="frame" x="0.0" y="560" width="600" height="40"/>
                     <subviews>
                         <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TSt-Rc-APs">
-                            <frame key="frameInset" minX="20" width="270" height="38"/>
+                            <rect key="frame" x="20" y="0.0" width="270" height="38"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YkY-fP-urg">
-                                    <frame key="frameInset" width="270" height="35"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="270" height="35"/>
                                     <color key="backgroundColor" red="0.94117647059999998" green="0.64313725489999995" blue="0.22352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="35" id="fi5-bw-iqf"/>
@@ -207,10 +211,10 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ChC-Km-Hx5">
-                            <frame key="frameInset" minX="310" width="270" height="38"/>
+                            <rect key="frame" x="310" y="0.0" width="270" height="38"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NsI-GG-qQ6">
-                                    <frame key="frameInset" width="270" height="35"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="270" height="35"/>
                                     <color key="backgroundColor" red="0.94117647059999998" green="0.64313725489999995" blue="0.22352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="35" id="jcO-Bd-fDU"/>
@@ -256,7 +260,7 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yFs-Vz-Rng">
-                    <frame key="frameInset" minY="560" width="600" height="40"/>
+                    <rect key="frame" x="0.0" y="560" width="600" height="40"/>
                     <color key="backgroundColor" red="0.94117647059999998" green="0.64313725489999995" blue="0.22352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="uxI-Rr-EMn"/>
@@ -270,7 +274,7 @@
                     </connections>
                 </button>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oz5-Tr-xzG">
-                    <frame key="frameInset" minY="229" width="600" height="330"/>
+                    <rect key="frame" x="0.0" y="229" width="600" height="330"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="600" id="5Kc-dN-C4G"/>
